Fix mobile CTA text visibility

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -382,12 +382,26 @@
       background: #fff
       color: color-default
 
+.content-action > span:not(.content-action-icon)
+  display: inline-flex
+  align-items: center
+  min-width: 0
+  color: currentColor
+  line-height: 1.25
+  opacity: 1
+  visibility: visible
+  white-space: normal
+
 .content-action-primary
   color: #fff
   background: color-default
+  > span:not(.content-action-icon)
+    color: #fff
   &:hover
     background: #fff
     color: color-default
+    > span:not(.content-action-icon)
+      color: color-default
     .content-action-icon
       background: color-default
       color: #fff
